--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ header {
 }
 
 .header-button {
-    display : inline-block;
+    display: inline-block;
     text-decoration: none;
     box-shadow: 10px 17px 34px 6px rgba(18, 71, 145, 0.83);
     border-radius: 50px;
@@ -43,6 +43,11 @@ header {
     font-weight: 700;
     padding: 17px 55px;
     margin-top: 33px;
+}
+
+.header-button:hover {
+    /* background-color: #dddddd; */
+    box-shadow: 5px 5px 10px 3px rgba(18, 71, 145, 0.83);
 }
 
 .header-small {
@@ -157,6 +162,11 @@ footer {
     color: #fff;
     border-radius: 50px;
     padding: 12px 40px;
+}
+
+.footer-button:hover {
+    box-shadow: 0px 0px 20px 6px rgba(18, 71, 145, 0.83);
+    border: 1px solid #3a7dfd;
 }
 
 @media (max-width: 1200px) {
